extends Control

func _on_Lv_1_pressed():
 get_tree().change_scene("res://Levels/Level 1.tscn")

func _on_Lv_2_pressed():
 get_tree().change_scene("res://Levels/Level 2.tscn")

func _on_Lv_3_pressed():
 get_tree().change_scene("res://Levels/Level 3.tscn")

func _on_Lv_4_pressed():
 get_tree().change_scene("res://Levels/Level 4.tscn")

func _on_Lv_5_pressed():
 get_tree().change_scene("res://Levels/Level 5.tscn")

func _on_Lv_6_pressed():
 get_tree().change_scene("res://Levels/Level 6.tscn")

func _on_Lv_7_pressed():
 get_tree().change_scene("res://Levels/Level 7.tscn")

func _on_Lv_8_pressed():
 get_tree().change_scene("res://Levels/Level 8.tscn")

func _on_Lv_9_pressed():
 get_tree().change_scene("res://Levels/Level 9.tscn")

func _on_Lv_10_pressed():
 get_tree().change_scene("res://Levels/Level 10.tscn")

func _on_Return_pressed():
 get_tree().change_scene("res://Levels/Main Menu.tscn")
